--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,6 @@
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     <a class="site-title" style="font-size: larger;" rel="author" href="{{ "" | relative_url }}">{{ site.title | escape }}</a>
-    <a class="site-nav" rel="author" href="{{ " /about" | relative_url }}">About</a>
+    <a class="site-nav" rel="author" href="{{ "about" | relative_url }}">About</a>
   </div>
 </header>
